buildscript {
  ext {
    //Library versions
    assertJVersion = '3.11.1'
    logbackVersion = '1.4.14'
    slf4jVersion = '2.0.12'
    junitVersion = '4.13.1'
    findbugsAnnotationsVersion = '3.0.1'
    defaultEncoding = 'UTF-8'
    spotbugsAnnotationsVersion = '4.8.4'
  }
}

apply plugin: 'base'
apply plugin: 'idea'
apply plugin: 'java'

repositories {
  mavenCentral()
}

group = 'org.venuspj'

sourceCompatibility = JavaVersion.VERSION_21
targetCompatibility = JavaVersion.VERSION_21

gradle.projectsEvaluated {
  tasks.withType(JavaCompile).tap {
    configureEach {
      options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
    }
  }
}
compileJava {
  doFirst {
    options.compilerArgs = [
            "--module-path", classpath.asPath
    ]
    classpath = files()
  }
}
tasks.withType(JavaCompile).configureEach {
  options.incremental = true
}

dependencies {
  compileOnly group: 'org.slf4j', name: 'slf4j-api', version: "${slf4jVersion}"
  compileOnly "com.github.spotbugs:spotbugs-annotations:${spotbugsAnnotationsVersion}"
  implementation("org.jetbrains:annotations:24.1.0")
  testImplementation group: 'org.assertj', name: 'assertj-core', version: "${assertJVersion}"
  testImplementation group: 'ch.qos.logback', name: 'logback-core', version: "${logbackVersion}"
  testImplementation group: 'ch.qos.logback', name: 'logback-classic', version: "${logbackVersion}"
  testImplementation group: 'org.slf4j', name: 'slf4j-api', version: "${slf4jVersion}"
  testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.2'
  testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.2'

  test {
    useJUnit()
  }
}